force-app/main/default/objects/Profile_Metadata_Part__b/Profile_Metadata_Part__b.object-meta.xml
<CustomObject>
    <description>Stores a part of the JSON representation of the complete Profile metadata.</description>
    <label>Profile Metadata Part</label>
    <pluralLabel>Profile Metadata Parts</pluralLabel>
</CustomObject>