force-app/main/default/objects/Profile_Metadata_Part__b/fields/Chunk__c.field-meta.xml
<CustomField>
    <fullName>Chunk__c</fullName>
    <description>A chunk of the Profile&apos;s JSON representation.</description>
    <inlineHelpText>A chunk of the Profile&apos;s JSON representation.</inlineHelpText>
    <label>Chunk</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>