force-app/main/default/objects/Profile_Metadata_Part__b/fields/Chunk_Number__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Number__c</fullName>
    <description>The index of the chunk. Used to reconstruct the original JSON representation of a Profile.</description>
    <inlineHelpText>The index of the chunk. Used to reconstruct the original JSON representation of a Profile.</inlineHelpText>
    <label>Chunk Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>