force-app/main/default/objects/Profile_Metadata_Part__b/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>The fullName of the corresponding Profile.</description>
    <inlineHelpText>The fullName of the corresponding Profile.</inlineHelpText>
    <label>Full Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>