force-app/main/default/objects/Profile_Metadata_Part__b/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <description>Salesforce Id of the Profile</description>
    <inlineHelpText>Salesforce Id of the Profile</inlineHelpText>
    <label>Profile Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>